dist_man1_MANS=

if BUILD_POTAHCOIND
  dist_man1_MANS+=potahcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=potahcoin-qt.1
endif

if BUILD_POTAHCOIN_CLI
  dist_man1_MANS+=potahcoin-cli.1
endif

if BUILD_POTAHCOIN_TX
  dist_man1_MANS+=potahcoin-tx.1
endif

if ENABLE_WALLET
if BUILD_POTAHCOIN_WALLET
  dist_man1_MANS+=potahcoin-wallet.1
endif
endif
